fixing an alignment bug in the login page

--- a/src/App.css
+++ b/src/App.css
@@ -52,20 +52,6 @@ body {
   grid-template-columns: repeat(6,1fr);
 }
 
-.login-form{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  padding: 5rem;
-  border-radius: 12px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(to right, #6aaff55d, rgba(245, 110, 110, 0.501));
-}
 
 .custom-mui-dropdown{
   width: 223px;
@@ -85,18 +71,6 @@ body {
     border: 1px solid rgb(239, 226, 226);
 }
 
-.image{
-  width: 82%;
-  height: 100%;
-  position: absolute;
-  top: 7%;
-  left: 41%;
-  transform: scale(1.2) rotateZ(-15deg);
-  background-image: url(./images/gameScene.png);
-  background-repeat: no-repeat;
-  border-radius: 23px;
-  opacity: 0.5;
-}
 
 .gameTitle{
   z-index: 10 !important;
@@ -109,3 +83,39 @@ body {
   color: white;
   text-shadow: 0px 0px 9px rgb(222, 222, 222);
 } 
+
+.image {
+  width: 82%;
+  height: 100%;
+  position: absolute;
+  top: 7%;
+  left: 41%;
+  transform: scale(1.2) rotateZ(-15deg);
+  background-image: url(./images/gameScene.png);
+  background-repeat: no-repeat;
+  border-radius: 23px;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.login-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 5rem;
+  border-radius: 12px;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to right, #6aaff55d, rgba(245, 110, 110, 0.501));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+/* Body settings */
+body {
+  overflow: hidden; /* Prevent scrolling */
+}
